--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,12 @@ scipy>=1.4.1
 scikit-learn==0.22
 matplotlib>=3.1.2
 pandas>=0.25.3
+click>=5.1
+joblib>=0.11
+python-dateutil>=2.1
+kiwisolver>=1.0.1
+cycler>=0.10
+pytz>=2017.2
+six>=1.5
 
 
